# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    15/11 2021 20:12
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        15/11 2021      create the file
# 
#     last modified: 15/11 2021 20:12
# ===============================================================

# ------------------
# defining variables
# ------------------
_dist_file_com  =
EXTRA_DIST      =

# ---------------
# make dist files
# ---------------
_dist_file_com  += \
                   gpio/gpio.uvoptx \
                   gpio/gpio.uvprojx


EXTRA_DIST      += $(_dist_file_com)
